--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,7 @@ div {
 }
 
 .german {
-  position: absolute;
-}
-
-.german:hover #german-one {
-  background-color: red;
-}
-
-.german:hover #german-two {
-  background-color: white;
-}
-
-.german:hover #german-three {
-  background-color: green;
+  position: relative;
 }
 
 #german-one {
@@ -40,9 +28,20 @@ div {
   background-color: gold;
 }
 
+.german:hover #german-one {
+  background-color: red;
+}
+
+.german:hover #german-two {
+  background-color: white;
+}
+
+.german:hover #german-three {
+  background-color: green;
+}
+
 .french {
-  position: relative;
-  top: 130px;
+  position: absolute;
   display: inline-block;
 }
 
@@ -50,7 +49,6 @@ div {
   background-color: blue;
   width: 70px;
   height: 90px;
-  position: absolute;
   left: 0px;
 }
 
@@ -78,4 +76,26 @@ div {
 
 .french:hover #french-three {
   background-color: orange;
+}
+
+.japanese {
+  display: inline-block;
+}
+
+#japanese-outer {
+  position: absolute;
+  top: 280px;
+  width: 210px;
+  height: 90px;
+  border: 1px solid black;
+}
+
+#japanese-inner {
+  position: absolute;
+  left: 70px;
+  top: 10px;
+  width: 70px;
+  height: 70px;
+  background-color: red;
+  border-radius: 60%;
 }
