changed css to use flexbox

--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,24 @@
   padding: 0;
 }
 
-section {
+main {
   margin: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-div {
-  width: 210px;
-  height: 30px;
+section {
+  margin: 10px;
 }
 
 .german {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.german div {
+  height: 30px;
+  width: 180px;
 }
 
 #german-one {
@@ -41,33 +48,25 @@ div {
 }
 
 .french {
-  position: absolute;
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+}
+
+.french div {
+  height: 90px;
+  width: 60px;
 }
 
 #french-one {
   background-color: blue;
-  width: 70px;
-  height: 90px;
-  left: 0px;
 }
 
 #french-two {
   background-color: white;
-  width: 70px;
-  height: 90px;
-  position: absolute;
-  top: 0px;
-  left: 70px;
 }
 
 #french-three {
   background-color: red;
-  width: 70px;
-  height: 90px;
-  position: absolute;
-  top: 0px;
-  left: 140px;
 }
 
 .french:hover #french-one {
@@ -79,23 +78,22 @@ div {
 }
 
 .japanese {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
 }
 
 #japanese-outer {
-  position: absolute;
-  top: 280px;
-  width: 210px;
+  width: 180px;
   height: 90px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #japanese-inner {
-  position: absolute;
-  left: 70px;
-  top: 10px;
   width: 70px;
   height: 70px;
   background-color: red;
-  border-radius: 60%;
+  border-radius: 50%;
 }
